force-app/main/default/objects/ServiceAppointment/fields/FSL__InJeopardyReason__c.field-meta.xml
<CustomField>
    <fullName>FSL__InJeopardyReason__c</fullName>
    <label>In Jeopardy Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delayed Start</fullName>
            </value>
            <value>
                <fullName>Delayed Finish</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Due Date Approaching</fullName>
            </value>
            <value>
                <fullName>Manual Scheduling Required</fullName>
            </value>
            <value>
                <fullName>Late to Complete</fullName>
            </value>
            <value>
                <fullName>Late to Dispatch</fullName>
            </value>
            <value>
                <fullName>Late to Enroute</fullName>
            </value>
            <value>
                <fullName>Late to report Accepted</fullName>
            </value>
            <value>
                <fullName>Late to report On Site</fullName>
            </value>
            <value>
                <fullName>Resource unavailable</fullName>
            </value>
            <value>
                <fullName>Job still on hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>