force-app/main/default/objects/ServiceAppointment/fields/FSM_AcceptTMAConditions__c.field-meta.xml
<CustomField>
    <fullName>FSM_AcceptTMAConditions__c</fullName>
    <description>Created as part of SFS-8168</description>
    <label>Accept TMA Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>