force-app/main/default/objects/ServiceAppointment/fields/FSM_Action_Code_API__c.field-meta.xml
<CustomField>
    <fullName>FSM_Action_Code_API__c</fullName>
    <description>SFS-5827</description>
    <label>Action Code API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A000</fullName>
            </value>
            <value>
                <fullName>A010</fullName>
            </value>
            <value>
                <fullName>A020</fullName>
            </value>
            <value>
                <fullName>A030</fullName>
            </value>
            <value>
                <fullName>A040</fullName>
            </value>
            <value>
                <fullName>A050</fullName>
            </value>
            <value>
                <fullName>A060</fullName>
            </value>
            <value>
                <fullName>A070</fullName>
            </value>
            <value>
                <fullName>A080</fullName>
            </value>
            <value>
                <fullName>A090</fullName>
            </value>
            <value>
                <fullName>A100</fullName>
            </value>
            <value>
                <fullName>A110</fullName>
            </value>
            <value>
                <fullName>A120</fullName>
            </value>
            <value>
                <fullName>A130</fullName>
            </value>
            <value>
                <fullName>A160</fullName>
            </value>
            <value>
                <fullName>COIF</fullName>
            </value>
            <value>
                <fullName>CORC</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>DSAT</fullName>
            </value>
            <value>
                <fullName>DSBC</fullName>
            </value>
            <value>
                <fullName>DSBS</fullName>
            </value>
            <value>
                <fullName>DSCS</fullName>
            </value>
            <value>
                <fullName>DSLS</fullName>
            </value>
            <value>
                <fullName>DSPL</fullName>
            </value>
            <value>
                <fullName>DSRA</fullName>
            </value>
            <value>
                <fullName>DSRB</fullName>
            </value>
            <value>
                <fullName>DSRC</fullName>
            </value>
            <value>
                <fullName>DSRW</fullName>
            </value>
            <value>
                <fullName>DSSC</fullName>
            </value>
            <value>
                <fullName>DSTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>