force-app/main/default/objects/ServiceAppointment/fields/FSM_Action_Code_Value__c.field-meta.xml
<CustomField>
    <fullName>FSM_Action_Code_Value__c</fullName>
    <label>Action Code Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>Reset</fullName>
            </value>
            <value>
                <fullName>Calibrate / Adjust</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>E2E Test</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Standby in operation</fullName>
            </value>
            <value>
                <fullName>Overhaul</fullName>
            </value>
            <value>
                <fullName>Spares required</fullName>
            </value>
            <value>
                <fullName>Spares Fitted</fullName>
            </value>
            <value>
                <fullName>Further Action(s) Required</fullName>
            </value>
            <value>
                <fullName>Unblocked</fullName>
            </value>
            <value>
                <fullName>PM Completed</fullName>
            </value>
            <value>
                <fullName>PM Incomplete</fullName>
            </value>
            <value>
                <fullName>Aborted Visit</fullName>
            </value>
            <value>
                <fullName>Taken Out of Service</fullName>
            </value>
            <value>
                <fullName>Plant in Hand</fullName>
            </value>
            <value>
                <fullName>Manually Dose</fullName>
            </value>
            <value>
                <fullName>Plant on Bypass</fullName>
            </value>
            <value>
                <fullName>Inspect</fullName>
            </value>
            <value>
                <fullName>Lubricate</fullName>
            </value>
            <value>
                <fullName>Remove and install correct FCD</fullName>
            </value>
            <value>
                <fullName>Reconstruct chamber min 5m from POC</fullName>
            </value>
            <value>
                <fullName>Redo pipe with correct/Approved material</fullName>
            </value>
            <value>
                <fullName>Carry out air testing with STW rep</fullName>
            </value>
            <value>
                <fullName>Rebook after Bechning completed</fullName>
            </value>
            <value>
                <fullName>Bed and surround with correct material</fullName>
            </value>
            <value>
                <fullName>Reconnect to correct sewer</fullName>
            </value>
            <value>
                <fullName>Create correct size landing stage</fullName>
            </value>
            <value>
                <fullName>Point lifting eyes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>