force-app/main/default/objects/ServiceAppointment/fields/FSM_ActionCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_ActionCode__c</fullName>
    <label>Action Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Label</fullName>
            </value>
            <value>
                <fullName>CWMA</fullName>
                <label>Clean Water Maint Activity</label>
            </value>
            <value>
                <fullName>CWOP</fullName>
                <label>Clean Water operations</label>
            </value>
            <value>
                <fullName>DEVSERVS</fullName>
                <label>Dev Services Waste</label>
            </value>
            <value>
                <fullName>DEVSERVW</fullName>
                <label>Dev Services Water</label>
            </value>
            <value>
                <fullName>MEBATT</fullName>
                <label>Metering Battery Replacement</label>
            </value>
            <value>
                <fullName>MECCCM</fullName>
                <label>Metering Customer Contact Compulsary</label>
            </value>
            <value>
                <fullName>MECCFR</fullName>
                <label>Metering Customer Contact FrOpt</label>
            </value>
            <value>
                <fullName>MEMMLM</fullName>
                <label>Metering Maintenance Large Meter</label>
            </value>
            <value>
                <fullName>MEMMSM</fullName>
                <label>Metering Maintenance Small Meter</label>
            </value>
            <value>
                <fullName>MENEWS</fullName>
                <label>Metering New Supplies</label>
            </value>
            <value>
                <fullName>MENHFR</fullName>
                <label>NHH Metering - Installs</label>
            </value>
            <value>
                <fullName>MENHLM</fullName>
                <label>NHH Metering - Large Meters</label>
            </value>
            <value>
                <fullName>MENHSM</fullName>
                <label>NHH Metering - Small Meters</label>
            </value>
            <value>
                <fullName>MENHVR</fullName>
                <label>NHH Metering - C1 Work Request Type</label>
            </value>
            <value>
                <fullName>MEPRMI</fullName>
                <label>Proactive Metering Installations</label>
            </value>
            <value>
                <fullName>NHINBIAC</fullName>
                <label>NHH inbound bilat.l Actioncode-I Process</label>
            </value>
            <value>
                <fullName>NHOTBWAC</fullName>
                <label>NHH Outbound job feedback code Generic</label>
            </value>
            <value>
                <fullName>NHSEN</fullName>
                <label>NHH Inbound WIF Action Code</label>
            </value>
            <value>
                <fullName>SECNSA</fullName>
                <label>Customer Networks Sewage - Action</label>
            </value>
            <value>
                <fullName>SECONT</fullName>
                <label>Infra Sewerage Contractor Feedback</label>
            </value>
            <value>
                <fullName>STATA</fullName>
                <label>Statutory - Action</label>
            </value>
            <value>
                <fullName>WDAQMA</fullName>
                <label>Supply Type Material</label>
            </value>
            <value>
                <fullName>WDAQNU</fullName>
                <label>Aqua Peas Used</label>
            </value>
            <value>
                <fullName>WDIPAC</fullName>
                <label>Infra - Proactive</label>
            </value>
            <value>
                <fullName>WWMA</fullName>
                <label>Waste Water Maint Activity</label>
            </value>
            <value>
                <fullName>WWOP</fullName>
                <label>Waste Water operations</label>
            </value>
            <value>
                <fullName>STAT</fullName>
                <isActive>false</isActive>
                <label>Statutory</label>
            </value>
            <value>
                <fullName>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</fullName>
                <isActive>false</isActive>
                <label>yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>