force-app/main/default/objects/ServiceAppointment/fields/FSM_ActionPerformedOther__c.field-meta.xml
<CustomField>
    <fullName>FSM_ActionPerformedOther__c</fullName>
    <description>Created as Part of SFS-5355</description>
    <label>Other Action Performed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>