force-app/main/default/objects/ServiceAppointment/fields/FSM_ActionPIACode__c.field-meta.xml
<CustomField>
    <fullName>FSM_ActionPIACode__c</fullName>
    <formula>IF(AND(!ISBLANK(TEXT(FSM_ActionCodeGroup__c)), !ISBLANK(TEXT( FSM_Action_Code_API__c ))), 


TEXT(FSM_ActionCodeGroup__c) + &apos;-&apos; + TEXT( FSM_Action_Code_API__c ),null)</formula>
    <label>PIA Code (Action)</label>
    <type>Text</type>
</CustomField>