force-app/main/default/objects/ServiceAppointment/fields/FSM_ActualSRProductiveTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_ActualSRProductiveTime__c</fullName>
    <description>SFI-679</description>
    <label>Actual SR Productive Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>