force-app/main/default/objects/ServiceAppointment/fields/FSM_AllCurrentAssignedResourceID__c.field-meta.xml
<CustomField>
    <fullName>FSM_AllCurrentAssignedResourceID__c</fullName>
    <description>SFL-886</description>
    <label>All Current Assigned Resource ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>