force-app/main/default/objects/ServiceAppointment/fields/FSM_AllocatedJob__c.field-meta.xml
<CustomField>
    <fullName>FSM_AllocatedJob__c</fullName>
    <description>SAL-2490
Updated as part of SFS-8473</description>
    <formula>FSM_SAPOrderOperationNumber__c &amp; &quot;-&quot; &amp;  FSM_WorkTypeCode__c &amp; &quot;-&quot; &amp; AppointmentNumber &amp; &quot;-&quot; &amp; TEXT(FSM_SAPJobPriority__c)</formula>
    <label>Allocated Job</label>
    <type>Text</type>
</CustomField>