force-app/main/default/objects/ServiceAppointment/fields/FSM_ApplyOpenWOMPValPermission__c.field-meta.xml
<CustomField>
    <fullName>FSM_ApplyOpenWOMPValPermission__c</fullName>
    <description>True if the user has &apos;Measuring Point Validation&apos; custom Permission. Used in FSL mobile to stop users from closing a WO as closed when there are open WOMP.  Custom permissions are not supported in FSL mobile flow. SFS-4065</description>
    <formula>$Permission.FSM_MeasuringPointValdiation</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apply Open WOMP Validation Permission</label>
    <type>Checkbox</type>
</CustomField>