force-app/main/default/objects/ServiceAppointment/fields/FSM_AppointmentDependencyExists__c.field-meta.xml
<CustomField>
    <fullName>FSM_AppointmentDependencyExists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true when the current  SA has an appointment dependency
Updated as a part of SFS-5426</description>
    <label>Appointment Dependency Exists</label>
    <type>Checkbox</type>
</CustomField>