force-app/main/default/objects/ServiceAppointment/fields/FSM_AssignedtoLoginUser__c.field-meta.xml
<CustomField>
    <fullName>FSM_AssignedtoLoginUser__c</fullName>
    <description>Created as part of SFS-2067
Updated as part of SFS-6540</description>
    <formula>IF( ISPICKVAL(FSSK__FSK_Assigned_Service_Resource__r.ResourceType , &apos;C&apos;),true,
IF((FSSK__FSK_Assigned_Service_Resource__r.RelatedRecordId = $User.Id), TRUE, FALSE))</formula>
    <label>Assigned to Login User?</label>
    <type>Checkbox</type>
</CustomField>