force-app/main/default/objects/ServiceAppointment/fields/FSM_AttendedJobWithinAptWindow__c.field-meta.xml
<CustomField>
    <fullName>FSM_AttendedJobWithinAptWindow__c</fullName>
    <description>When user attends a customer appointment need to capture the detail whether he has attended the appointment within appointment window . Created as a part of SFS-3082.</description>
    <label>Attending the job within SA window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>