force-app/main/default/objects/ServiceAppointment/fields/FSM_Backlog__c.field-meta.xml
<CustomField>
    <fullName>FSM_Backlog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as a part of SFS-3043</description>
    <label>Backlog</label>
    <type>Checkbox</type>
</CustomField>