force-app/main/default/objects/ServiceAppointment/fields/FSM_BacklogScore__c.field-meta.xml
<CustomField>
    <fullName>FSM_BacklogScore__c</fullName>
    <formula>IF((  FSM_DueDateApplyCounterZPM1__c   * 2)&lt;=6,FSM_DueDateApplyCounterZPM1__c * 2,6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backlog Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>