force-app/main/default/objects/ServiceAppointment/fields/FSM_BusinessAreaMailjet__c.field-meta.xml
<CustomField>
    <fullName>FSM_BusinessAreaMailjet__c</fullName>
    <description>SFI-1822.</description>
    <label>Business Area Mailjet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metering</fullName>
            </value>
            <value>
                <fullName>Waste</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>HD</fullName>
            </value>
            <value>
                <fullName>DevService</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>