force-app/main/default/objects/ServiceAppointment/fields/FSM_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>FSM_BusinessUnit__c</fullName>
    <description>SFS-155</description>
    <formula>TEXT(FSSK__FSK_Work_Order__r.FSM_BusinessUnit__c)</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>