force-app/main/default/objects/ServiceAppointment/fields/FSM_CancellationCategory__c.field-meta.xml
<CustomField>
    <fullName>FSM_CancellationCategory__c</fullName>
    <label>Cancellation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>TMA</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>