force-app/main/default/objects/ServiceAppointment/fields/FSM_CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>FSM_CancellationReason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FSM_CancellationCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Available Resource</fullName>
            </value>
            <value>
                <fullName>No Available Resource - Skills</fullName>
            </value>
            <value>
                <fullName>Correct Vehicle/Equipment Not Available</fullName>
            </value>
            <value>
                <fullName>Same Day Rein Not Booked</fullName>
            </value>
            <value>
                <fullName>Incorrect Promotion</fullName>
            </value>
            <value>
                <fullName>Build Error</fullName>
            </value>
            <value>
                <fullName>Further Work Required</fullName>
            </value>
            <value>
                <fullName>Vehicle/Plant Breakdown</fullName>
            </value>
            <value>
                <fullName>No Access</fullName>
            </value>
            <value>
                <fullName>Parked Cars</fullName>
            </value>
            <value>
                <fullName>Asset No Longer on Site</fullName>
            </value>
            <value>
                <fullName>Equipment Out of Service</fullName>
            </value>
            <value>
                <fullName>TMA System Error</fullName>
            </value>
            <value>
                <fullName>TMA Validity Period</fullName>
            </value>
            <value>
                <fullName>TMA Passed Validity Date</fullName>
            </value>
            <value>
                <fullName>TMA on Private Street</fullName>
            </value>
            <value>
                <fullName>HA Refusal</fullName>
            </value>
            <value>
                <fullName>HA Revoked</fullName>
            </value>
            <value>
                <fullName>TMA Started in Error</fullName>
            </value>
            <value>
                <fullName>Job Built Retrospectively</fullName>
            </value>
            <value>
                <fullName>System Error</fullName>
            </value>
            <value>
                <fullName>Job Not Required - STW</fullName>
            </value>
            <value>
                <fullName>Job Not Required - Customer</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Out of SLA - Task Superseded</fullName>
            </value>
            <value>
                <fullName>Poor Housekeeping</fullName>
            </value>
            <value>
                <fullName>Raised on Wrong Property</fullName>
            </value>
            <value>
                <fullName>Job Started in Error</fullName>
            </value>
            <value>
                <fullName>Emergency/Incident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>