force-app/main/default/objects/ServiceAppointment/fields/FSM_CapacityType__c.field-meta.xml
<CustomField>
    <fullName>FSM_CapacityType__c</fullName>
    <label>Capacity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reactive</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Non Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>