force-app/main/default/objects/ServiceAppointment/fields/FSM_CapitalCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_CapitalCode__c</fullName>
    <description>Created as a part of SFS-1428.To capture capital code for a job via mobile app.</description>
    <label>Capital Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>