force-app/main/default/objects/ServiceAppointment/fields/FSM_CaseId__c.field-meta.xml
<CustomField>
    <fullName>FSM_CaseId__c</fullName>
    <description>SFL-132/ SFS-8403</description>
    <formula>FSSK__FSK_Work_Order__r.CaseId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Id</label>
    <type>Text</type>
</CustomField>