force-app/main/default/objects/ServiceAppointment/fields/FSM_CaseManagingRequired__c.field-meta.xml
<CustomField>
    <fullName>FSM_CaseManagingRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as a part of SFS-5171.This field is captured by by field technician/Virtual users while closing the SA.</description>
    <label>Case Managing Required?</label>
    <type>Checkbox</type>
</CustomField>