force-app/main/default/objects/ServiceAppointment/fields/FSM_CaseManagingRequiredDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_CaseManagingRequiredDate__c</fullName>
    <description>Created as a part of SFS-5171</description>
    <label>Case Managing Required ?(Date)</label>
    <type>DateTime</type>
</CustomField>