force-app/main/default/objects/ServiceAppointment/fields/FSM_CaseNeedsServiceRecovery__c.field-meta.xml
<CustomField>
    <fullName>FSM_CaseNeedsServiceRecovery__c</fullName>
    <description>Created as part of SFI-1279..</description>
    <formula>IF(FSM_CaseManagingRequired__c, &apos;Fieldworker has flagged job for service recovery&apos;,&apos;&apos;)</formula>
    <label>Case Needs Service Recovery</label>
    <type>Text</type>
</CustomField>