force-app/main/default/objects/ServiceAppointment/fields/FSM_CheckTMA__c.field-meta.xml
<CustomField>
    <fullName>FSM_CheckTMA__c</fullName>
    <description>Created as a part of SFS-292</description>
    <formula>NOT(ISBLANK(FSSK__FSK_Work_Order__r.FSM_TMAPermit__c))</formula>
    <label>Check TMA</label>
    <type>Checkbox</type>
</CustomField>