force-app/main/default/objects/ServiceAppointment/fields/FSM_ConstraintEnd__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConstraintEnd__c</fullName>
    <description>Scheduling Constraint. Date after which a job could never be scheduled</description>
    <label>Constraint End Date</label>
    <type>DateTime</type>
</CustomField>