force-app/main/default/objects/ServiceAppointment/fields/FSM_ConstraintStart__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConstraintStart__c</fullName>
    <description>Scheduling Constraint. Date before which a job could never be scheduled</description>
    <label>Constraint Start Date</label>
    <type>DateTime</type>
</CustomField>