force-app/main/default/objects/ServiceAppointment/fields/FSM_ConstraintStartScore__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConstraintStartScore__c</fullName>
    <formula>IF((FSM_SchedulingConstraintEndDateTime__c &lt; DATETIMEVALUE(TODAY())), 0 , IF ( (FSM_SchedulingConstraintEndDateTime__c &gt; (DATETIMEVALUE(TODAY())+4)),0,(4 - ((FSM_SchedulingConstraintEndDateTime__c - DATETIMEVALUE(TODAY()))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Constraint Start Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>