force-app/main/default/objects/ServiceAppointment/fields/FSM_CoreTMAJob__c.field-meta.xml
<CustomField>
    <fullName>FSM_CoreTMAJob__c</fullName>
    <description>Indicates if job is  a Core TMA Job . Created as part of SFS-8678</description>
    <formula>FSSK__FSK_Work_Order__r.FSM_CoreTMAJob__c</formula>
    <label>Core TMA</label>
    <type>Checkbox</type>
</CustomField>