force-app/main/default/objects/ServiceAppointment/fields/FSM_CumulativeNonProductiveTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_CumulativeNonProductiveTime__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created as part of user story #SFS-169. Used to calculate the non productive hours per Service Appointment for a Service Resource.</description>
    <label>Cumulative Non Productive Time (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>