force-app/main/default/objects/ServiceAppointment/fields/FSM_CumulativeProductiveTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_CumulativeProductiveTime__c</fullName>
    <description>Created as a part of SFS-3049</description>
    <formula>IF(NOT(ISBLANK(FSM_CumulativeProductiveTimeInMins__c) ) ,
TEXT(
  FLOOR(FSM_CumulativeProductiveTimeInMins__c /60)) &amp; &quot; hrs &quot; &amp; 
TEXT(
  ROUND
    (MOD(FSM_CumulativeProductiveTimeInMins__c,60),0)) &amp; &quot; mins &quot;, 
NULL)</formula>
    <label>Cumulative Productive Time</label>
    <type>Text</type>
</CustomField>