force-app/main/default/objects/ServiceAppointment/fields/FSM_CumulativeProductiveTimeInMins__c.field-meta.xml
<CustomField>
    <fullName>FSM_CumulativeProductiveTimeInMins__c</fullName>
    <description>Created as a part of SFS-3049</description>
    <label>Cumulative Productive Time In Mins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>